--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "should": "^9.0.2"
   },
   "dependencies": {
-    "ml-matrix": "github:mljs/matrix",
+    "ml-matrix": "^2.0.0",
     "ml-stat": "^1.2.0"
   }
 }
