--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "mocha --require should --reporter mocha-better-spec-reporter --recursive",
-    "build": "cheminfo build -b -u"
+    "build": "cheminfo build -b -u",
+    "database": "node data/update.js"
   },
   "devDependencies": {
     "cheminfo-tools": "^1.5.0",
     "mocha": "^2.5.1",
     "mocha-better-spec-reporter": "^3.0.2",
-    "should": "^9.0.2"
+    "should": "^9.0.2",
+    "superagent": "^2.2.0"
   },
   "dependencies": {
     "ml-matrix": "^2.0.0",
-    "ml-stat": "^1.2.0"
+    "ml-stat": "^1.2.0",
+    "papaparse": "^4.1.2"
   }
 }
