--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   },
   "devDependencies": {
     "cheminfo-tools": "^1.5.0",
+    "eslint": "^3.18.0",
+    "eslint-config-cheminfo": "^1.7.0",
+    "eslint-plugin-no-only-tests": "^1.1.0",
     "mocha": "^3.1.0",
     "mocha-better-spec-reporter": "^3.0.2",
     "should": "^9.0.2",
     "superagent": "^2.2.0"
   },
   "dependencies": {
+    "debug": "^2.6.3",
     "deepcopy": "^0.6.3",
     "lodash.groupby": "^4.6.0",
     "ml-matrix": "^2.0.0",
