--- a/package.json
+++ b/package.json
@@ -15,28 +15,30 @@
   "license": "MIT",
   "main": "./src/index.js",
   "scripts": {
-    "test": "mocha --require should --reporter mocha-better-spec-reporter --recursive",
-    "build": "cheminfo build -b",
+    "build": "cheminfo-build --entry src/index.js --root ChemEquilibirum",
     "database": "node data/update.js",
-    "eslint": "eslint .",
-    "eslint-fix": "eslint --fix ."
+    "eslint": "eslint src",
+    "eslint-fix": "npm run eslint -- --fix",
+    "prepack": "rollup -c",
+    "prettier": "prettier --check src",
+    "prettier-write": "prettier --write src",
+    "test": "mocha --require should --reporter mocha-better-spec-reporter --recursive"
   },
   "devDependencies": {
-    "cheminfo-tools": "^1.5.0",
-    "eslint": "^3.18.0",
-    "eslint-config-cheminfo": "^1.7.0",
-    "eslint-plugin-no-only-tests": "^1.1.0",
-    "mocha": "^3.1.0",
-    "mocha-better-spec-reporter": "^3.0.2",
-    "should": "^9.0.2",
-    "superagent": "^2.2.0"
+    "@types/jest": "^28.1.3",
+    "cheminfo-build": "^1.1.11",
+    "eslint": "^8.18.0",
+    "eslint-config-cheminfo": "^8.0.1",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
+    "superagent": "^8.0.0"
   },
   "dependencies": {
-    "debug": "^2.6.3",
-    "deepcopy": "^0.6.3",
+    "debug": "^4.3.4",
+    "deepcopy": "^2.1.0",
     "lodash.groupby": "^4.6.0",
-    "ml-matrix": "^2.0.0",
-    "ml-stat": "^1.2.0",
-    "papaparse": "^4.1.2"
+    "ml-matrix": "^6.10.1",
+    "ml-stat": "^1.3.3",
+    "papaparse": "^5.3.2"
   }
 }
